--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </body>
 </html> 
 
-<!---- Korzystając z metody .querySelector() albo .
-querySelectorAll(), pokoloruj na czerwono font nagłówka, 
-a wszystkim akapitom zmień tło na żółte. -->
+<!---- Napisz funkcję, która - po 2-krotnym kliknięciu w dowolnym miejscu okna 
+    (obiekt window) - w oknie modalnym alert() 
+    wyświetli aktualną pozycję kursora (tzn. 
+    współrzędne X oraz Y) w obszarze przeglądarki 
+    oraz aktualną pozycję kursora (tzn. współrzędne
+     X oraz Y) na ekranie. -->
